--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,18 +10,14 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.8
+  firebase_core: ^3.12.1
   flutter:
     sdk: flutter
   go_router: ^14.8.1
   google_fonts: ^6.2.1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
