--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,15 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.8
+  firebase_auth: ^5.5.1
   firebase_core: ^3.12.1
   flutter:
     sdk: flutter
   go_router: ^14.8.1
   google_fonts: ^6.2.1
+  google_sign_in: ^6.3.0
+  lottie: ^3.3.1
+  provider: ^6.1.2
   url_launcher: ^6.3.1
 
 dev_dependencies:
@@ -35,6 +39,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/lottie/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
   # For details regarding adding assets from package dependencies, see
