--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.8
+  dio: ^5.8.0+1
   firebase_auth: ^5.5.1
   firebase_core: ^3.12.1
   flutter:
@@ -40,6 +41,7 @@ flutter:
   assets:
     - assets/images/
     - assets/lottie/
+    - assets/images/category_images/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
   # For details regarding adding assets from package dependencies, see
