--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   go_router: ^14.8.1
   google_fonts: ^6.2.1
   google_sign_in: ^6.3.0
+  intl: ^0.20.2
   lottie: ^3.3.1
   provider: ^6.1.2
   url_launcher: ^6.3.1
