--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
   sdk: ^3.7.0
 
 dependencies:
+  animate_do: ^4.2.0
   cupertino_icons: ^1.0.8
   dio: ^5.8.0+1
   firebase_auth: ^5.5.1
@@ -21,13 +22,14 @@ dependencies:
   intl: ^0.20.2
   lottie: ^3.3.1
   provider: ^6.1.2
+  shimmer: ^3.0.0
   url_launcher: ^6.3.1
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.14.2"
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: "^0.14.2"
 
 flutter_launcher_icons:
   android: "launcher_icon"
